<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainIntakesFragment">
    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainintakes_segment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        segmentedgroup:sc_tint_color="@color/orange"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="5dp">

        <RadioButton
            android:id="@+id/mainintakes_radio_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mt_protein"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/mainintakes_radio_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mt_water"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/mainintakes_radio_excercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mt_exercise"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/mainintakes_radio_vitamins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mt_vitamins"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/mainintakes_radio_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mt_weight"
            style="@style/RadioButton" />

    </info.hoang8f.android.segmented.SegmentedGroup>
    <FrameLayout android:id="@+id/mainintakes_container" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
</LinearLayout>