<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitaminsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/vitamins_txt_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                style="@style/IntakeSubTitle"
                android:text="@string/str_track_vitamin_subtitle"/>
            <LinearLayout android:id="@+id/vitamins_linear_content5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">
                <!-- Today & Yesterday title -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/vitamins_txt_vitaminstoday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ContentTitle"
                        android:text="@string/str_today"/>
                    <TextView
                        android:id="@+id/vitamins_txt_vitaminsyest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        style="@style/ContentTitle"
                        android:textColor="@color/darkBlue"
                        android:text="@string/str_yesterday"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:weightSum="2"
                    android:orientation="vertical">
                    <!-- Today Stars -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <ImageView android:id="@+id/vitamins_vitamins_today_iv_star"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/icon_onestar_d"
                            />
                    </LinearLayout>
                    <!-- Yesterday stars -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <ImageView android:id="@+id/vitamins_vitamins_yest_iv_star"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/icon_onestar_d"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/IntakeInputDesc"
                android:text="@string/str_track_vitamin_subdesc"/>
            <LinearLayout android:id="@+id/vitamins_linear_content6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginLeft="8dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">
                <!-- Today & Yesterday title -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ContentTitle"
                        android:layout_marginTop="5dp"
                        android:text="@string/str_today"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        style="@style/ContentTitle"
                        android:textColor="@color/darkBlue"
                        android:text="@string/str_yesterday"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"
                    android:weightSum="2"
                    android:orientation="vertical">
                    <!-- Today Stars -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/vitamins_sb_today"
                            style="@style/SwitchButtonStyle"
                            app:kswTintColor="@color/gold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <!-- Yesterday stars -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:weightSum="10"
                        android:orientation="horizontal">
                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/vitamins_sb_yesterday"
                            style="@style/SwitchButtonStyle"
                            app:kswTintColor="@color/gold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray"
                />
            <com.github.mikephil.charting.charts.BarChart
                android:layout_marginTop="8dp"
                android:id="@+id/vitamins_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/chart_height"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>